k8s/rabbitmq.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-amqp
  namespace: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 31212
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: rabbitmq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: public
  tls:
    - secretName: rabbitmq.resflow.ru-tls
      hosts:
        - rabbitmq.resflow.ru
  rules:
  - host: rabbitmq.resflow.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rabbitmq
            port:
              name: management
