k8s/registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
  labels:
    app: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:3
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          volumeMounts:
            - name: repo-vol
              mountPath: "/var/lib/registry"
            - name: certs-vol
              mountPath: "/certs"
              readOnly: true
            - name: auth-vol
              mountPath: "/auth"
              readOnly: true
      volumes:
        - name: repo-vol
          hostPath:
            path: /opt/registry
            type: DirectoryOrCreate
        - name: certs-vol
          secret:
            secretName: registry.resflow.ru-tls
        - name: auth-vol
          secret:
            secretName: auth-secret
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: 4096m
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "HEAD, GET, OPTIONS, DELET"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Accept, Cache-Control"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://registry-ui.resflow.ru"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Docker-Content-Digest"
spec:
  tls:
    - hosts:
        - registry.resflow.ru
      secretName: registry.resflow.ru-tls
  rules:
    - host: registry.resflow.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registry
              port:
                number: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  namespace: registry
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:main
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: registry
spec:
  selector:
    app: registry-ui
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ui
  namespace: registry
  labels:
    app: registry-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - registry-ui.resflow.ru
      secretName: registry-ui.resflow.ru-tls
  rules:
    - host: registry-ui.resflow.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: registry-ui
              port:
                number: 80
